# SiPM3000-Driver

./: .gitignore  README.html  README.md
extract-registers/: extract_registers.py  fsr_settings.json  mca3k_data.py  mca_api.py
libusb-1.0-experimenting/: Makefile  lusb1.cpp
libusb-1.0-experimenting/old-stuff/: test_usb.cpp.bak
old-stuff/: main.old
source-code/: CMakeLists.txt  main.cc  main.hh
source-code/include/: ArmCalibrationContainer.hh  ArmCtrlContainer.hh  ArmStatusContainer.hh  ArmVersionContainer.hh  BaseManager.hh  CMakeLists.txt  FpgaActionContainer.hh  FpgaCtrlContainer.hh  FpgaResultsContainer.hh  FpgaStatisticsContainer.hh  FpgaTraceContainer.hh  IoContainer.hh  LegacyHistogramContainer.hh  ListModeContainer.hh  SimManager.hh  TimeSliceContainer.hh  UsbManager.hh
source-code/lib/sim_data/: bck_histo.txt  sample_pf.txt  sim_init.txt
source-code/lib/sim_data/archive/: sipm_3k_version.txt
source-code/src/: ArmCalibrationContainer.cc  ArmCtrlContainer.cc  ArmStatusContainer.cc  ArmVersionContainer.cc  BaseManager.cc  CMakeLists.txt  FpgaActionContainer.cc  FpgaCtrlContainer.cc  FpgaResultsContainer.cc  FpgaStatisticsContainer.cc  FpgaTraceContainer.cc  IoContainer.cc  LegacyHistogramContainer.cc  ListModeContainer.cc  SimManager.cc  TimeSliceContainer.cc  UsbFuncHandle.cc  UsbManager.cc
src/: Makefile  fixdeps.bash  main.cpp  main.cpp.bak  main.hpp
src/io-containers/: ArmCtrlContainer.cpp  ArmCtrlContainer.hpp  ArmVersionContainer.cpp  ArmVersionContainer.hpp  FpgaActionContainer.cpp  FpgaActionContainer.hpp  FpgaCtrlContainer.cpp  (+8 more)
(+12 files in other folders)
